finishing up work to add executor view for shell
Signed-off-by: vsoch <vsochat@stanford.edu>

--- a/qme/app/static/css/style.css
+++ b/qme/app/static/css/style.css
@@ -1,3 +1,17 @@
+/* Colors for badges */
+
+.badge-red {
+  background-color: #d54625;
+}
+
+.badge-green {
+  background-color: #35bd4a;
+}
+
+.badge-blue {
+  background-color: #357ebd;
+}
+
 .table-sortable > thead > tr > th {
   cursor: pointer;
 }
