updating base executor to have timestamp, adding confirmation to delete
Signed-off-by: vsoch <vsochat@stanford.edu>

--- a/qme/app/templates/executors/shell.html
+++ b/qme/app/templates/executors/shell.html
@@ -61,12 +61,16 @@
 				<td>{{ task.uid }}</td>
 			      </tr>
 			      <tr>
-				<td>Executied directory</td>
+				<td>Executed directory</td>
 				<td>{{ task.data.pwd }}</td>
 			      </tr>
 			      <tr>
 				<td>Process id (pid)</td>
 				<td>{{ task.data.pid }}</td>
+			      </tr>
+			      <tr>
+				<td>Timestamp</td>
+				<td>{{ task.data.timestamp }}</td>
 			      </tr>
 			    </tbody>
 			  </table>
