--- a/docs/api/modules/qme/app/views/executors.html
+++ b/docs/api/modules/qme/app/views/executors.html
@@ -164,7 +164,6 @@
 <span class="kn">from</span> <span class="nn">flask</span> <span class="k">import</span> <span class="n">Flask</span><span class="p">,</span> <span class="n">render_template</span>
 <span class="kn">from</span> <span class="nn">flask_socketio</span> <span class="k">import</span> <span class="n">emit</span>
 
-<span class="c1"># from werkzeug import secure_filename</span>
 <span class="kn">from</span> <span class="nn">qme.app.server</span> <span class="k">import</span> <span class="n">app</span><span class="p">,</span> <span class="n">socketio</span>
 <span class="kn">from</span> <span class="nn">qme.defaults</span> <span class="k">import</span> <span class="n">QME_SOCKET_UPDATE_SECONDS</span>
 
@@ -175,6 +174,7 @@
 <div class="viewcode-block" id="shell_executor"><a class="viewcode-back" href="../../../../source/qme.app.views.html#qme.app.views.executors.shell_executor">[docs]</a><span class="nd">@app</span><span class="o">.</span><span class="n">route</span><span class="p">(</span><span class="s2">&quot;/executor/&lt;taskid&gt;&quot;</span><span class="p">)</span>
 <span class="k">def</span> <span class="nf">shell_executor</span><span class="p">(</span><span class="n">taskid</span><span class="p">):</span>
 
+    <span class="c1"># TODO: return executor template based on task.executor.name</span>
     <span class="n">task</span> <span class="o">=</span> <span class="n">app</span><span class="o">.</span><span class="n">queue</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="n">taskid</span><span class="p">)</span>
     <span class="k">return</span> <span class="n">render_template</span><span class="p">(</span>
         <span class="s2">&quot;executors/shell.html&quot;</span><span class="p">,</span> <span class="n">task</span><span class="o">=</span><span class="n">task</span><span class="o">.</span><span class="n">load</span><span class="p">(),</span> <span class="n">database</span><span class="o">=</span><span class="n">app</span><span class="o">.</span><span class="n">queue</span><span class="o">.</span><span class="n">database</span>
