adding docker tutorial and fixing bug with queue interface
Signed-off-by: vsoch <vsochat@stanford.edu>

--- a/qme/app/templates/executors/shell.html
+++ b/qme/app/templates/executors/shell.html
@@ -24,7 +24,7 @@
       <br>
       <div class='panel panel-default'>
         <div class='table-responsive' id="app">
-          <h2 style="margin-left:5px">> {{ task.data.command|join(' ') }}</h2>
+          <h2 style="margin-left:5px">> {{ task.command }}</h2>
           <hr> 
           <div class="row">
             <div class="col-md-3">
