adding message argument for run/rerun, partial matching for search, and print of host/port to terminal on qme start
Signed-off-by: vsoch <vsochat@stanford.edu>

--- a/qme/app/templates/executors/shell.html
+++ b/qme/app/templates/executors/shell.html
@@ -48,6 +48,10 @@
 				<td>Return Code</td>
 				<td>{{ task.data.returncode }}</td>
 			      </tr>
+			      {% if task.data.message %}<tr>
+				<td>Annotation</td>
+				<td>{{ task.data.message }}</td>
+			      </tr>{% endif %}
 			      <tr>
 				<td>Status</td>
 				<td>{{ task.data.status }}</td>
